[package]
name = "tower-jwt"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.21", features = ["default", "compat"] }
http = "0.2.8"
jsonwebtoken = "8.1.1"
pin-project = "1.0.12"
serde = { version = "1.0.142", features = ["default", "derive"] }
thiserror = "1.0.32"
tower = "0.4.13"
typed-headers = "0.2.0"

[dev-dependencies]
chrono = "0.4.20"
tokio = { version = "1.20.1", features = ["full"] }
